fix used llm text
